# minisatip

./: .bazelrc  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD.bazel  CLAUDE.md  CMakeLists.txt  LICENSE  MODULE.bazel  Makefile  Makefile.in  README.html  README.md  README.txt  RELEASE_NOTES.md  Supported_Hardware.md  WORKSPACE  adapter.c  adapter.h  aes.c  axe.c  axe.h  build-gx.sh  build.sh  ca.c  ca.h  configure  configure.ac  csa.c  ddci.c  ddci.h  dvb.c  dvb.h  dvbapi.c  dvbapi.h  install-minisatip.sh  minisatip.c  minisatip.crash  minisatip.h  (+20 more)
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: binaries-manual-mips.yml  binaries.yml  build.yml  c-cpp.yml  codeql-analysis.yml  coverity-scan.yml  coverity.yml  debian.yml  tests.yml
binaries/: minisatip_dvbcsa_mipsel_vuplus  minisatip_dvbcsa_mipsel_vuplus.sh  minisatip_mipsel_vuplus  minisatip_openwrt_ar71xx
debian/: .gitignore  changelog  control  copyright  default  dirs  docs  gen_changelog  init  install  links  minisatip.conf  minisatip.path  postinst  postrm  rules  service  watch
html/: ConnectionMgr.xml  ContentDir  ContentDir.xml  dLAN.xml  desc.xml  jquery.dataTables.min.css  jquery.pBar.min.js  satfinder.html  satip.xml  status.html
src/: CMakeLists.txt  Makefile.in  adapter.c  adapter.cpp  adapter.h  aes.c  aes.cpp  aes.h  avapi.c  axe.c  axe.h  bootid  ca.c  ca.cpp  ca.h  confdefs.h  csa.c  ddci.c  ddci.cpp  ddci.h  dvb.c  dvb.cpp  dvb.h  dvbapi.c  dvbapi.cpp  dvbapi.h  gxapi.c  gxapi.h  httpc.c  httpc.cpp  httpc.h  minisatip.c  minisatip.cpp  minisatip.h  netceiver.c  netceiver.cpp  netceiver.h  netceiver_mcli_defs.h  opts.c  opts.cpp  (+23 more)
src/api/: symbols.c  symbols.cpp  symbols.h  variables.c  variables.cpp  variables.h
src/cov-int/: BUILD.metrics.xml  build-cwd.txt  build-id.txt  build-log.txt  build-timings.txt
src/cov-int/emit/vps/: emit-db
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/: coverity_config_created
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/g++-config-0/: coverity-macro-compat.h  coverity_config.xml
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/g++-config-1/: coverity_config.xml
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/g++cc-config-0/: coverity_config.xml
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/g++cc-config-1/: coverity-macro-compat.h  coverity_config.xml
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/gcc-config-0/: coverity_config.xml
src/cov-int/emit/vps/config/8214d047244147b5ee8a110bd4cef3f3/ld-config-0/: coverity_config.xml
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/: coverity_config.xml  coverity_config_created
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/g++-config-0/: coverity-compiler-compat.h  coverity-macro-compat.h  coverity_config.xml
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/g++-config-1/: coverity_config.xml
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/g++cc-config-0/: coverity-compiler-compat.h  coverity_config.xml
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/g++cc-config-1/: coverity-macro-compat.h  coverity_config.xml
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/gcc-config-0/: coverity-compiler-compat.h  coverity_config.xml
src/cov-int/emit/vps/config/c0bb96eabc2392e629e10e6a4d0021fd/ld-config-0/: coverity_config.xml
src/gxapi/include/: avapi.h  frontend.h  gx_error.h  gxav_common.h  gxav_demux_propertytypes.h  gxav_event_type.h  gxav_hdcp_key.h  gxav_ioctl.h  gxav_module_property.h  gxcore_os.h  gxcore_version.h  gxtype.h  s2apiwrapper.h
src/utils/: alloc.c  alloc.cpp  alloc.h  fifo.c  fifo.cpp  fifo.h  hash_table.c  hash_table.cpp  hash_table.h  mutex.c  mutex.h  testing.h  ticks.c  ticks.h  uuid.c  uuid.h
src/utils/dvb/: dvb_charset_tables.h  dvb_support.c  dvb_support.h
src/utils/logging/: logging.c  logging.cpp  logging.h
tests/: CMakeLists.txt  Makefile.in  test_adapter.c  test_adapter.cpp  test_ca.c  test_ca.cpp  test_ddci.c  test_ddci.cpp  test_dvb.c  test_dvb.cpp  test_minisatip.cpp  test_opts.c  test_opts.cpp  test_play  test_pmt.c  test_pmt.cpp  test_satipc.cpp  test_socketworks.c  test_socketworks.cpp  test_stream.cpp  test_utils.c  test_utils.cpp
tests/utils/: test_hash_table.c  test_utils.cpp  test_utils_dir.cpp
toolchains/: BUILD.bazel  cc_toolchain_config.bzl
tools/: autostart.readme  determine_version.sh  gen_readme  replay.py  softserver.py
