# Minisatip Bazel Build File
# Feature flags mirror configure.ac and src/Makefile.in options
#
# Usage:
#   bazel build //:minisatip                           # Default: all features enabled
#   bazel build //:minisatip --define dvbcsa=0         # Disable dvbcsa
#   bazel build //:minisatip --define dvbca=0          # Disable CA/OpenSSL
#   bazel build //:minisatip --define dvbapi=0         # Disable dvbapi
#   bazel build //:minisatip --define satipclient=0    # Disable satip client
#   bazel build //:minisatip --define linuxdvb=0       # Disable linux dvb
#   bazel build //:minisatip --config=minimal          # Minimal build (no optional features)
#   bazel build //:minisatip --config=ca_only          # CA/OpenSSL only
#   bazel build //:minisatip --config=dvbcsa_only      # DVBCSA only

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

# Version string
VERSION = "1.0.0"

#############################################################################
# Configuration settings for feature flags
#############################################################################

# DVBCSA - enables CSA decryption support
config_setting(
    name = "dvbcsa_disabled",
    values = {"define": "dvbcsa=0"},
)

# DVBCA - enables Common Interface (CI) support via OpenSSL
config_setting(
    name = "dvbca_disabled",
    values = {"define": "dvbca=0"},
)

# DVBAPI - enables dvbapi protocol support
config_setting(
    name = "dvbapi_disabled",
    values = {"define": "dvbapi=0"},
)

# SATIPCLIENT - enables SatIP client support
config_setting(
    name = "satipclient_disabled",
    values = {"define": "satipclient=0"},
)

# LINUXDVB - enables Linux DVB support
config_setting(
    name = "linuxdvb_disabled",
    values = {"define": "linuxdvb=0"},
)

# DDCI - enables DDCI support (requires DVBCA on Linux)
config_setting(
    name = "ddci_disabled",
    values = {"define": "ddci=0"},
)

# NETCVCLIENT - enables Netceiver support
config_setting(
    name = "netcvclient_disabled",
    values = {"define": "netcvclient=0"},
)

# PMT - explicitly control PMT support
config_setting(
    name = "pmt_disabled",
    values = {"define": "pmt=0"},
)

# TABLES - explicitly control TABLES support
config_setting(
    name = "tables_disabled",
    values = {"define": "tables=0"},
)

#############################################################################
# Common compiler flags
#############################################################################

COMMON_COPTS = [
    "-Wall",
    "-Wno-switch",
    "-g",
    "-fPIC",
    "-fno-common",
    "-fno-omit-frame-pointer",
    "-Warray-bounds",
    "-std=c++20",
    "-O2",
    "-DVERSION=\\\"" + VERSION + "\\\"",
    "-DDISABLE_STACKTRACE",  # C++23 stacktrace not available
]

#############################################################################
# Source file groups
#############################################################################

# All headers
ALL_HDRS = glob([
    "src/*.h",
    "src/**/*.h",
])

# Core sources (always compiled)
CORE_SRCS = [
    "src/adapter.cpp",
    "src/dvb.cpp",  # Always included per Makefile.in
    "src/httpc.cpp",
    "src/minisatip.cpp",
    "src/opts.cpp",
    "src/socketworks.cpp",
    "src/stream.cpp",
    "src/utils.cpp",
    "src/api/symbols.cpp",
    "src/api/variables.cpp",
    "src/utils/dvb/dvb_support.cpp",
    "src/utils/fifo.cpp",
    "src/utils/logging/logging.cpp",
    "src/utils/ticks.cpp",
    "src/utils/uuid.cpp",
]

#############################################################################
# Main configurable binary
#############################################################################

cc_binary(
    name = "minisatip",
    srcs = CORE_SRCS + ALL_HDRS +
           # DVBCSA sources
           select({
               ":dvbcsa_disabled": [],
               "//conditions:default": ["src/csa.cpp"],
           }) +
           # DVBCA sources (ca.cpp, aes.cpp)
           select({
               ":dvbca_disabled": [],
               "//conditions:default": ["src/ca.cpp", "src/aes.cpp"],
           }) +
           # DVBAPI sources
           select({
               ":dvbapi_disabled": [],
               "//conditions:default": ["src/dvbapi.cpp"],
           }) +
           # PMT sources
           select({
               ":pmt_disabled": [],
               "//conditions:default": ["src/pmt.cpp"],
           }) +
           # TABLES sources
           select({
               ":tables_disabled": [],
               "//conditions:default": ["src/tables.cpp"],
           }) +
           # SATIPCLIENT sources
           select({
               ":satipclient_disabled": [],
               "//conditions:default": ["src/satipc.cpp"],
           }) +
           # DDCI sources (enabled with DVBCA on Linux)
           select({
               ":ddci_disabled": [],
               ":dvbca_disabled": [],
               "//conditions:default": ["src/ddci.cpp"],
           }) +
           # NETCVCLIENT sources
           select({
               ":netcvclient_disabled": [],
               "//conditions:default": ["src/netceiver.cpp"],
           }),
    copts = COMMON_COPTS +
            # DVBCSA define
            select({
                ":dvbcsa_disabled": ["-DDISABLE_DVBCSA"],
                "//conditions:default": [],
            }) +
            # DVBCA define
            select({
                ":dvbca_disabled": ["-DDISABLE_DVBCA"],
                "//conditions:default": [],
            }) +
            # DVBAPI define
            select({
                ":dvbapi_disabled": ["-DDISABLE_DVBAPI"],
                "//conditions:default": [],
            }) +
            # PMT define
            select({
                ":pmt_disabled": ["-DDISABLE_PMT"],
                "//conditions:default": [],
            }) +
            # TABLES define
            select({
                ":tables_disabled": ["-DDISABLE_TABLES"],
                "//conditions:default": [],
            }) +
            # SATIPCLIENT define
            select({
                ":satipclient_disabled": ["-DDISABLE_SATIPCLIENT"],
                "//conditions:default": [],
            }) +
            # LINUXDVB define
            select({
                ":linuxdvb_disabled": ["-DDISABLE_LINUXDVB"],
                "//conditions:default": [],
            }) +
            # DDCI define - disabled when ddci=0 OR dvbca=0
            select({
                ":ddci_disabled": ["-DDISABLE_DDCI"],
                ":dvbca_disabled": ["-DDISABLE_DDCI"],
                "//conditions:default": [],
            }) +
            # NETCVCLIENT define
            select({
                ":netcvclient_disabled": ["-DDISABLE_NETCVCLIENT"],
                "//conditions:default": [],
            }),
    includes = ["src"],
    linkopts = [
        "-lpthread",
        "-lrt",
    ] +
    # DVBCA link options (crypto, dl)
    select({
        ":dvbca_disabled": [],
        "//conditions:default": ["-lcrypto", "-ldl"],
    }) +
    # NETCVCLIENT link options
    select({
        ":netcvclient_disabled": [],
        "//conditions:default": ["-lnetceiver", "-lxml2", "-llzma", "-lz"],
    }),
    visibility = ["//visibility:public"],
    deps = select({
        ":dvbcsa_disabled": [],
        "//conditions:default": ["@dvbcsa"],
    }),
)

#############################################################################
# Convenience targets with specific configurations
#############################################################################

# Minimal build - no optional features
cc_binary(
    name = "minisatip_minimal",
    srcs = CORE_SRCS + ALL_HDRS + ["src/satipc.cpp"],
    copts = COMMON_COPTS + [
        "-DDISABLE_DVBCSA",
        "-DDISABLE_DVBCA",
        "-DDISABLE_DVBAPI",
        "-DDISABLE_PMT",
        "-DDISABLE_TABLES",
        "-DDISABLE_DDCI",
        "-DDISABLE_NETCVCLIENT",
    ],
    includes = ["src"],
    linkopts = [
        "-lpthread",
        "-lrt",
    ],
    visibility = ["//visibility:public"],
)

# CA only build - OpenSSL/CA without dvbcsa
cc_binary(
    name = "minisatip_ca",
    srcs = CORE_SRCS + ALL_HDRS + [
        "src/ca.cpp",
        "src/aes.cpp",
        "src/pmt.cpp",
        "src/tables.cpp",
        "src/satipc.cpp",
        "src/ddci.cpp",
    ],
    copts = COMMON_COPTS + [
        "-DDISABLE_DVBCSA",
        "-DDISABLE_DVBAPI",
        "-DDISABLE_NETCVCLIENT",
    ],
    includes = ["src"],
    linkopts = [
        "-lpthread",
        "-lrt",
        "-ldl",
        "-lcrypto",
    ],
    visibility = ["//visibility:public"],
)

# DVBCSA only build - dvbcsa without CA/OpenSSL
cc_binary(
    name = "minisatip_dvbcsa",
    srcs = CORE_SRCS + ALL_HDRS + [
        "src/csa.cpp",
        "src/pmt.cpp",
        "src/satipc.cpp",
    ],
    copts = COMMON_COPTS + [
        "-DDISABLE_DVBCA",
        "-DDISABLE_DVBAPI",
        "-DDISABLE_TABLES",
        "-DDISABLE_DDCI",
        "-DDISABLE_NETCVCLIENT",
    ],
    includes = ["src"],
    linkopts = [
        "-lpthread",
        "-lrt",
    ],
    visibility = ["//visibility:public"],
    deps = ["@dvbcsa"],
)
